# prismarine

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: memories.md
src/prismarine/: cli.py  prisma_client.py
