[project]
name = "prismarine"
version = "1.6.0"
description = "Pythonic DynamoDB ORM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.19",
    "case-converter>=1.2.0",
    "click==8.1.8",
    "mako>=1.3.10",
    "ruff>=0.14.1",
    "types-boto3[dynamodb]>=1.38.19",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/scartill/prismarine"
Changelog = "https://github.com/scartill/prismarine/blob/main/CHANGELOG.md"

[project.scripts]
prismarine = "prismarine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prismarine"]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "ruff>=0.14.1",
    "pydantic>=2.9.0",
    "pytest>=8.3.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W"]
